<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginmodel"
            type="com.example.pavan.cabletvcrm.ViewModels.LoginViewModel"></variable>
    </data>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.administrator.cph.Login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/Cable_Tv_Crm"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:textColor="@color/title"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@color/lightBackground"
        android:layout_centerVertical="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/heading"
            android:text="@string/Sign_In"
            android:gravity="center"
            android:textSize="18sp"
            android:paddingTop="40dp"
            android:textColor="@color/Black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/Name"
            android:ems="10"
            android:id="@+id/username"
            android:background="@drawable/rectangular"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:paddingLeft="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/editText2"
            android:background="@drawable/rectangular"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:paddingLeft="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded"
            android:layout_margin="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remember_Me"
            android:id="@+id/checkBox"
            android:textColor="@color/Black"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/title"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forgot_pass"
            android:text="@string/Forgot_Password"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:gravity="top|center_horizontal"
            android:paddingBottom="50dp"
            />
    </LinearLayout>

</RelativeLayout>
</layout>